--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -1,3 +1,10 @@
 main {
   display: flex;
 }
+
+@media screen and (max-width: 1100px) {
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+}
